added more pages

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # DJANGO_SECRET_KEY=your-secret-key-here
 
 # Database
-DB_NAME=hrma
+DB_NAME=hrma_db
 DB_USER=postgres
 DB_PASSWORD=sak@2001server
 DB_HOST=localhost
