--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
+diff-match-patch==20241021
+dj-database-url==3.0.1
 Django==5.2.5
 django-filter==25.1
+django-import-export==4.3.9
 django-jazzmin==3.0.1
 django-multiselectfield==1.0.1
 django-storages==1.14.6
@@ -13,4 +16,5 @@ psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 requests==2.32.5
 sqlparse==0.5.3
+tablib==3.8.0
 urllib3==2.5.0
